[package]
name = "s57_tiler"
version = "0.1.0"
authors = ["William Kamp <manimaul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
geojson = "0.20.1"
gdal = { git = "https://github.com/manimaul/gdal-rust.git", branch = "wkamp_iter" }
gdal-sys = { git = "https://github.com/manimaul/gdal-rust.git", branch = "wkamp_iter" }
clap = "2.33.3"
#gdal = { path = "/Users/williamkamp/source/madrona/gdal-rust" }
#gdal-sys = { path = "/Users/williamkamp/source/madrona/gdal-rust" }
#gdal-sys = "0.2.0"
