[package]
name = "s57server"
version = "0.1.0"
authors = ["William Kamp <manimaul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
futures = "0.3.8"
actix-web = "3.3.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.118"
diesel = { version = "1.4.4", features = ["postgres", "extras"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
r2d2_postgres = "0.18.0"
geojson = "0.20.1"
lazy_static = "1.4.0"
postgres = { version = "0.19.0", features = ["with-serde_json-1"] }

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-project-layout
[lib]
name = "s57server"
path = "src/lib.rs"